syntax = "proto3";

package linuxcnc.status;

option java_package = "ro.dragossusi.proto.linuxcnc.status";
option java_multiple_files = true;

enum LengthUnit {
  IN = 0;
  MM = 1;
  CM = 2;
}